Fixed map container on mobile

--- a/dev/styles/main.css
+++ b/dev/styles/main.css
@@ -630,18 +630,22 @@ footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
     -ms-flex-direction: column-reverse;
-    flex-direction: column-reverse; }
+    flex-direction: column-reverse;
+    position: relative; }
     .map-scroll {
       width: 100%;
       height: 160px;
       overflow-x: auto;
       display: -webkit-box;
       display: -ms-flexbox;
-      display: flex; }
+      display: flex;
+      position: absolute;
+      z-index: 10; }
       .map-scroll-tile {
         border-right: 1px solid #afafaf;
         min-width: 200px;
         overflow: hidden; }
     .map-container {
       width: 100%;
-      height: 260px; } }
+      height: 100%;
+      position: absolute; } }
