--- a/dev/styles/partials/_media-queries.scss
+++ b/dev/styles/partials/_media-queries.scss
@@ -71,11 +71,14 @@
 @media (max-width: 750px) {
   .map {
     flex-direction: column-reverse;
+    position: relative;
     &-scroll {
       width: 100%;
       height: 160px;
       overflow-x: auto;
       display: flex;
+      position: absolute;
+      z-index: 10;
       &-tile {
         border-right: 1px solid $grey;
         min-width: 200px;
@@ -84,7 +87,8 @@
     }
     &-container {
       width: 100%;
-      height: 260px;
+      height: 100%;
+      position: absolute;
     }
   }
 }
